automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "for i in \n",
     "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
