--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
    },
    "outputs": [],
    "source": [
-    "for i in \n",
+    "for i in city_indices\n",
+    "    \n",
     "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
