--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "source": [
     "for i in city_indices\n",
     "    i = i + 1\n",
-    "    names_and_ranks[i-1] = \"i\" + \" \" + \n",
+    "    names_and_ranks[i-1] = \"i\" + \". \" + \"\"\n",
     "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
