--- a/index.ipynb
+++ b/index.ipynb
@@ -216,8 +216,7 @@
    "outputs": [],
    "source": [
     "for i in city_indices\n",
-    "    i = i + 1\n",
-    "    names_and_ranks[i-1] = \"i\" + \". \" + city_names[i]\n",
+    "    names_and_ranks[i] = \"i+\" + \". \" + city_names[i]\n",
     "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
