--- a/index.ipynb
+++ b/index.ipynb
@@ -209,15 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-7e1e9fbf74ef>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-7e1e9fbf74ef>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for i in city_indices\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "for i in city_indices\n",
-    "    names_and_ranks[i] = \"i+\" + \". \" + city_names[i]\n",
-    "names_and_ranks = ['change this to different elements'] # make sure the list is empty"
+    "    names_and_ranks[i] = \"i+1\" + \". \" + city_names[i]\n",
+    "#names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
   {
