--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    ],
    "source": [
     "for i in city_indices\n",
-    "    names_and_ranks[i] = \"i+1\" + \". \" + city_names[i]\n",
+    "    names_and_ranks[i] = \"i+1\" \". \" + city_names[i]\n",
     "#names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
