--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,28 +209,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in city_indices:\n",
-    "    names_and_ranks = city_names\n",
-    "    names_and_ranks[i] = \"1\" + city_names[i]\n",
+    "    names_and_ranks[i] = i + 1\" + \". \" + city_names[i]\n",
     "#names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11. . int(i). i. Iguazu Falls'"
+       "'i + 1. Iguazu Falls'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
