--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    ],
    "source": [
     "for i in city_indices:\n",
-    "    new_rank = i + 1\n",
+    "    new_rank = str(i + 1\n",
     "    names_and_ranks[i] = ''.join([new_rank,\". \",city_names[i]])\n",
     "#names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
