automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    ],
    "source": [
     "for i in city_indices:\n",
-    "    city_populations = cities[i]['Population']"
+    "    city_populations[i] = cities[i]['Population']"
    ]
   },
   {
