automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,6 +267,7 @@
    ],
    "source": [
     "for x in city_indices:\n",
+    "    city_popyla\n",
     "    city_populations[x] = cities[x]['Population']"
    ]
   },
